Fix comic being outside of screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,10 @@ table tr td{
     table{
         margin: 1%;
     }
+
+    .comic {
+        margin-left: 0;
+    }
 }
 
 @media only screen and (max-width:600px){
